--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
-  #node:
-  #  restart: always
-  #  build: .
-  #  ports:
-  #    - 3000:3000
-  #  volumes:
-  #    - ./:/usr/src/app
+  node:
+    restart: always
+    build: .
+    ports:
+      - 3000:3000
+    volumes:
+      - ./:/usr/src/app
   mongo:
     image: mongo
     ports:
