--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pinata/sdk": "^1.1.23",
     "async": "^3.2.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
